execute python test02